--- a/.github/workflows/project-manager-agent.yml
+++ b/.github/workflows/project-manager-agent.yml
@@ -1,6 +1,7 @@
 name: Project Manager Agent
 
 on:
+  push:
   workflow_dispatch:
     inputs:
       project_overview_file:
@@ -17,7 +18,7 @@ on:
         description: 'Directory containing tasks'
         required: false
         type: string
-        default: '.project'
+        default: '.project/tasks/'
       project_title:
         description: 'Title of the project for the tracking issue'
         required: false
@@ -41,29 +42,40 @@ jobs:
         with:
             fetch-depth: 0
 
-      - name: Prepare System Prompt
+      - name: Prepare Project Manager Script
         id: project-manager-agent-script
-        run: |
-          echo "system_prompt<<EOF" >> $GITHUB_OUTPUT
-          cat .github/agent-scripts/project-manager.script.md >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-          
-          echo "task<<EOF" >> $GITHUB_OUTPUT
-          echo "project_overview:" >> $GITHUB_OUTPUT
-          echo '```markdown' >> $GITHUB_OUTPUT
-          cat ${{ inputs.project_overview_file }} >> $GITHUB_OUTPUT
-          echo '```' >> $GITHUB_OUTPUT
-          echo "" >> $GITHUB_OUTPUT
-          echo "tasks:" >> $GITHUB_OUTPUT
-          echo '```' >> $GITHUB_OUTPUT
-          find ${{ inputs.tasks_dir }} >> $GITHUB_OUTPUT
-          echo '```' >> $GITHUB_OUTPUT
-          echo "" >> $GITHUB_OUTPUT
-          echo "task_registry:" >> $GITHUB_OUTPUT
-          echo '```markdown' >> $GITHUB_OUTPUT
-          cat ${{ inputs.task_registry_file }} >> $GITHUB_OUTPUT
-          echo '```' >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            
+            const systemPrompt = fs.readFileSync('.github/agent-scripts/project-manager.script.md', 'utf8');
+            const projectOverview = fs.readFileSync('${{ inputs.project_overview_file || '.project/project-overview.md' }}', 'utf8');
+            const taskRegistry = fs.readFileSync('${{ inputs.task_registry_file || '.project/task-registry.md' }}', 'utf8');
+
+            
+            const { execSync } = require('child_process');
+            const tasksDir = '${{ inputs.tasks_dir || '.project/tasks' }}';
+            const tasksList = execSync(`find ${tasksDir}`, { encoding: 'utf8' }).trim();
+            
+            const task = `project_overview:
+            \`\`\`markdown
+            ${projectOverview}
+            \`\`\`
+
+            tasks:
+            \`\`\`
+            ${tasksList}
+            \`\`\`
+
+            task_registory:
+            \`\`\`
+            ${taskRegistry}
+            \`\`\`
+            `;
+
+            core.setOutput('system_prompt', systemPrompt);
+            core.setOutput('task', task);
 
       - uses: Unshure/strands-action@main
         with:
