--- a/.github/workflows/task-implementer-agent.yml
+++ b/.github/workflows/task-implementer-agent.yml
@@ -1,8 +1,16 @@
 name: Task Implementer Agent
 
 on:
+  # Pull requests created by workflows will never tirgger the `pull_request` event type
+  # https://github.com/peter-evans/create-pull-request/blob/main/docs/concepts-guidelines.md#triggering-further-workflow-runs
   pull_request:
     types: [labeled]
+  pull_request_review:
+    types: [submitted]
+  issue_comment:
+    types: [created]
+  pull_request_review_comment:
+    types: [created]
   issues:
     types: [labeled]
   workflow_dispatch:
@@ -35,76 +43,30 @@ on:
 jobs:
   task-implementer:
     runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch' || (github.event.action == 'labeled' && github.event.label.name == 'run-implement')
+    # This workflow should trigger in the following cases:
+    # 1. Workflow dispatch for testing/debugging
+    # 2. Label added to an issue `implement-task`
+    # 3. Comment added to an issue `/strands-implement`
+    # 4. Comment added to a pull request `/strands-implement`
+    # *5. Label added to a pull request `implement-task`
+    # *6. Comment on pull request review with `/strands-implement`
+    # *7. Comment on a pull request review commetn with `strands-implement`
+    #
+    # Cases with '*' cannot be triggered if the pull request is created by a github workflow
+    # https://github.com/peter-evans/create-pull-request/blob/main/docs/concepts-guidelines.md#triggering-further-workflow-runs
+    if: |
+      github.event_name == 'workflow_dispatch' || 
+      (github.event.action == 'labeled' && github.event.label.name == 'implement-task') ||
+      (github.event_name == 'issue_comment' && contains(github.event.comment.body, '/strands-implement')) ||
+      (github.event_name == 'pull_request_review' && contains(github.event.review.body, '/strands-implement')) ||
+      (github.event_name == 'pull_request_review_comment' && contains(github.event.comment.body, '/strands-implement'))
     permissions:
       contents: write
       issues: write
       pull-requests: write
       id-token: write  # Required for OIDC
     steps:
-      - name: Replace run-implement label with implement-running
-        if: github.event_name == 'issues'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            await github.rest.issues.removeLabel({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              name: 'run-implement'
-            });
-            await github.rest.issues.addLabels({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              labels: ['implement-running']
-            });
-
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-            fetch-depth: 0
-            ref: ${{ inputs.pull_request_id && format('refs/pull/{0}/head', inputs.pull_request_id) || (github.event_name == 'pull_request' && github.event.pull_request.number && format('refs/pull/{0}/head', github.event.pull_request.number)) || 'main' }}
-
-      - name: Read task implementer script
-        id: task-implementer-agent-script
-        if: (github.event_name == 'workflow_dispatch' && inputs.execution_mode == 'Initialize') || (github.event_name == 'issues' && github.event.action == 'labeled' && github.event.label.name == 'run-implement')
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const fs = require('fs');
-            
-            const systemPrompt = fs.readFileSync('.github/agent-scripts/task-implementer.script.md', 'utf8');
-            const projectOverview = fs.readFileSync('${{ inputs.project_overview_file || '.project/project-overview.md' }}', 'utf8');
-            
-            const issueId = '${{ inputs.issue_id || github.event.issue.number }}';
-            
-            const task = `project_overview:
-            \`\`\`markdown
-            ${projectOverview}
-            \`\`\`
-
-            issue_number: ${issueId}
-
-            Implement the feature in issue #${issueId}`;
-
-            core.setOutput('system_prompt', systemPrompt);
-            core.setOutput('task', task);
-
-      - uses: strands-agents/strands-action@main
-        with:
-          aws_role_arn: ${{ secrets.AWS_ROLE_ARN }}
-          system_prompt: ${{ steps.task-implementer-agent-script.outputs.system_prompt }}
-          session_id: "implementer-${{ inputs.issue_id || github.event.issue.number || github.run_id }}"
-          session_s3_bucket: ${{ secrets.TYPESCRIPT_SESSIONS_BUCKET }}
-          tools: "editor,file_read,shell,http_request,list_pull_requests,list_issues,add_comment,create_issue,get_issue,get_pull_request,update_pull_request,get_pr_reviews,create_pull_request,update_issue,get_issue_comments,reply_to_pr_review,notebook"
-          # Prompt always overrides the task prompt for any mode
-          # If the mode is "Initialize", then the prompt should provide the input parameters to the script
-          # If the mode is "Continue", then the prompt should tell the agent to review the feedback on the issue.
-          task: ${{ inputs.prompt || ((inputs.execution_mode == 'Continue' || github.event_name == 'pull_request') && 'Review the feedback and continue.') || steps.task-implementer-agent-script.outputs.task }}
-
-      - name: Remove agent-running label
-        if: always() && github.event_name == 'issues'
+      - name: Replace implement-task label with task-implement-running
         uses: actions/github-script@v7
         with:
           script: |
@@ -113,7 +75,105 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: context.issue.number,
-                name: 'implement-running'
+                name: 'implement-task'
+              });
+            } catch (error) {
+              console.log('implement-task label may not exist:', error.message);
+            }
+            await github.rest.issues.addLabels({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              labels: ['task-implement-running']
+            });
+
+      - name: Extract issue ID from PR body
+        id: extract-issue
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            // Extract issue number from PR body using GitHub linking keywords
+            // Reference: https://docs.github.com/en/issues/tracking-your-work-with-issues/using-issues/linking-a-pull-request-to-an-issue#linking-a-pull-request-to-an-issue-using-a-keyword
+            const prBody = context.payload.pull_request?.body || '';
+            const issueMatch = prBody.match(/(?:close[ds]?|fix(?:e[ds])?|resolve[ds]?):\s*#(\d+)|(?:close[ds]?|fix(?:e[ds])?|resolve[ds]?)\s+#(\d+)/i);
+            const issueNumber = issueMatch ? (issueMatch[1] || issueMatch[2]) : null;
+            core.setOutput('issue_number', issueNumber);
+
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+            fetch-depth: 0
+            ref: ${{ inputs.pull_request_id && format('refs/pull/{0}/head', inputs.pull_request_id) || (github.event.pull_request.number && format('refs/pull/{0}/head', github.event.pull_request.number)) || (github.event.review.pull_request.number && format('refs/pull/{0}/head', github.event.review.pull_request.number)) || (github.event.issue.pull_request && format('refs/pull/{0}/head', github.event.issue.number)) || 'main' }}
+
+      - name: Read task implementer script
+        id: task-implementer-agent-script
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            
+            const systemPrompt = fs.readFileSync('.github/agent-scripts/task-implementer.script.md', 'utf8');
+            
+            // Determine task based on execution mode and event type
+            let task;
+            
+            // Input prompt always overrides everything for testing
+            if ('${{ inputs.prompt }}') {
+              task = '${{ inputs.prompt }}';
+            }
+            // If the mode is "Continue" or it's a PR-related event, tell agent to review feedback
+            else if ('${{ inputs.execution_mode }}' === 'Continue' || 
+                     '${{ github.event_name }}' === 'pull_request' || 
+                     '${{ github.event_name }}' === 'pull_request_comment' || 
+                     '${{ github.event_name }}' === 'pull_request_review' ||
+                     ('${{ github.event_name }}' === 'issue_comment' && '${{ github.event.issue.pull_request }}')) {
+              task = 'Review and address the feedback on the pr.';
+            }
+            // Otherwise, generate the full task with project overview
+            else {
+              const projectOverview = fs.readFileSync('${{ inputs.project_overview_file || '.project/project-overview.md' }}', 'utf8');
+              const issueId = '${{ inputs.issue_id || github.event.issue.number }}';
+              
+              task = `project_overview:
+              \`\`\`markdown
+              ${projectOverview}
+              \`\`\`
+
+              issue_number: ${issueId}
+
+              Implement the feature in issue #${issueId}`;
+            }
+
+            core.setOutput('system_prompt', systemPrompt);
+            core.setOutput('task', task);
+
+      - uses: strands-agents/strands-action@main
+        with:
+          aws_role_arn: ${{ secrets.AWS_ROLE_ARN }}
+          system_prompt: ${{ steps.task-implementer-agent-script.outputs.system_prompt }}
+          session_id: "implementer-${{ inputs.issue_id || github.event.issue.number || steps.extract-issue.outputs.issue_number }}"
+          session_s3_bucket: ${{ secrets.TYPESCRIPT_SESSIONS_BUCKET }}
+          thinking_type: "enabled"
+          budget_tokens: "8000"
+          model: "global.anthropic.claude-sonnet-4-5-20250929-v1:0"
+          anthropic_beta: "interleaved-thinking-2025-05-14"
+          max_tokens: "64000"
+          tools: "editor,file_read,shell,http_request,create_issue,get_issue,update_issue,list_issues,add_issue_comment,get_issue_comments,create_pull_request,get_pull_request,update_pull_request,list_pull_requests,get_pr_review_and_comments,notebook,handoff_to_user"
+          task: ${{ steps.task-implementer-agent-script.outputs.task }}
+
+      - name: Remove task-implement-running label
+        uses: actions/github-script@v7
+        # Always remove the label even on failure
+        if: always()
+        with:
+          script: |
+            try {
+              await github.rest.issues.removeLabel({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                name: 'task-implement-running'
               });
             } catch (error) {
               console.log('Label may not exist:', error.message);
