refactor: address PR feedback and improve development experience
- Remove tests_integ/setup.test.ts (low value, redundant)
- Remove package-lock.json and add to .gitignore (SDK best practice)
- Restructure test files to use nested describe pattern for better organization
- Update coverage threshold from 100% to 80% (more pragmatic)
- Remove TDD enforcement section from CONTRIBUTING.md (flexibility)
- Remove redundant Development Workflow section
- Add Husky pre-commit hooks for automated quality checks
- Consolidate quality check documentation in Contributing section
- Update AGENTS.md to reflect new coverage requirements
- Document pre-commit hooks in setup instructions

All tests passing (13/13), 100% coverage maintained, all quality checks passing.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lint:fix": "eslint src tests tests_integ --fix",
     "format": "prettier --write src tests tests_integ",
     "format:check": "prettier --check src tests tests_integ",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "prepare": "husky"
   },
   "keywords": [
     "agents",
@@ -43,6 +44,7 @@
     "@vitest/coverage-v8": "^2.0.0",
     "eslint": "^9.0.0",
     "eslint-plugin-tsdoc": "^0.3.0",
+    "husky": "^9.1.7",
     "prettier": "^3.0.0",
     "typescript": "^5.5.0",
     "vitest": "^2.0.0"
