feat: implement path aliases, reorganize tests and documentation
Path Aliases:
- Add TypeScript path aliases (@/) for cleaner imports
- Configure tsconfig.json with baseUrl and paths
- Update vitest.config.ts to resolve path aliases
- Update test imports to use @/ instead of relative paths

Test Reorganization:
- Move unit tests from tests/ to src/__tests__/ (co-located with source)
- Integration tests remain in tests_integ/
- Update all test file imports to use path aliases
- Update ESLint, Prettier, and TypeScript configs for new structure

Documentation Reorganization:
- AGENTS.md: Agent-specific development guidance (coding patterns, testing patterns, workflow)
- README.md: Complete project overview with roadmap, usage examples, getting started
- CONTRIBUTING.md: Simplified human contribution guidelines, references AGENTS.md
- Clear separation of concerns between AGENTS.md (agents), README.md (users), CONTRIBUTING.md (human contributors)

All quality checks passing: 13/13 tests, 100% coverage, linting, formatting, type checking.

Addresses PR feedback from zastrowm and Unshure.

--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:integ": "vitest run tests_integ",
-    "lint": "eslint src tests tests_integ",
-    "lint:fix": "eslint src tests tests_integ --fix",
-    "format": "prettier --write src tests tests_integ",
-    "format:check": "prettier --check src tests tests_integ",
+    "lint": "eslint src tests_integ",
+    "lint:fix": "eslint src tests_integ --fix",
+    "format": "prettier --write src tests_integ",
+    "format:check": "prettier --check src tests_integ",
     "type-check": "tsc --noEmit",
     "prepare": "husky"
   },
