--- a/.github/workflows/test-lint.yml
+++ b/.github/workflows/test-lint.yml
@@ -20,6 +20,13 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     
     steps:
+      - name: Set git to use LF
+        if: matrix.os == 'windows-latest'
+        # https://github.com/actions/checkout/issues/135
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+
       - name: Checkout code
         uses: actions/checkout@v4
         with:
@@ -32,7 +39,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: npm install
+        run: npm install && npm audit --audit-level=low
 
       - name: Run unit tests
         run: npm test
