--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
   "bugs": {
     "url": "https://github.com/strands-agents/sdk-typescript/issues"
   },
-  "homepage": "https://github.com/strands-agents/sdk-typescript#readme"
+  "homepage": "https://github.com/strands-agents/sdk-typescript#readme",
+  "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.911.0"
+  }
 }
