--- a/.github/workflows/task-implementer-agent.yml
+++ b/.github/workflows/task-implementer-agent.yml
@@ -124,6 +124,12 @@ jobs:
             fetch-depth: 0
             ref: ${{ inputs.pull_request_id && format('refs/pull/{0}/head', inputs.pull_request_id) || (github.event.pull_request.number && format('refs/pull/{0}/head', github.event.pull_request.number)) || (github.event.review.pull_request.number && format('refs/pull/{0}/head', github.event.review.pull_request.number)) || (github.event.issue.pull_request && format('refs/pull/{0}/head', github.event.issue.number)) || 'main' }}
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: '20'
+          cache: 'npm'
+
       - name: Install dependencies
         run: npm install
 
