--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf node_modules dist package-lock.json",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "test:integ": "vitest run tests_integ",
+    "test": "vitest run --project unit",
+    "test:watch": "vitest --project unit",
+    "test:coverage": "vitest run --coverage --project unit",
+    "test:integ": "vitest run --project integ",
     "lint": "eslint src tests_integ",
     "lint:fix": "eslint src tests_integ --fix",
     "format": "prettier --write src tests_integ",
