--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf node_modules dist package-lock.json",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "test:integ": "vitest run tests_integ",
+    "test": "vitest run --project unit",
+    "test:watch": "vitest --project unit",
+    "test:coverage": "vitest run --coverage --project unit",
+    "test:integ": "vitest run --project integ",
     "lint": "eslint src tests_integ",
     "lint:fix": "eslint src tests_integ --fix",
     "format": "prettier --write src tests_integ",
@@ -39,6 +39,7 @@
   "author": "Strands Agents",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@aws-sdk/credential-providers": "^3.913.0",
     "@types/json-schema": "^7.0.15",
     "@types/node": "^24.6.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
@@ -61,5 +62,8 @@
   "bugs": {
     "url": "https://github.com/strands-agents/sdk-typescript/issues"
   },
-  "homepage": "https://github.com/strands-agents/sdk-typescript#readme"
+  "homepage": "https://github.com/strands-agents/sdk-typescript#readme",
+  "dependencies": {
+    "@aws-sdk/client-bedrock-runtime": "^3.911.0"
+  }
 }
