feat: implement OpenAI model core structure and configuration
- Add openai package dependency (v4.77.3)
- Implement OpenAIModelConfig interface with OpenAI-specific options
- Implement OpenAIModelOptions interface with apiKey, baseUrl, and clientConfig
- Create OpenAIModel class with constructor, updateConfig, getConfig methods
- Add stream method stub (to be implemented in Task 04.2)
- Implement comprehensive unit tests with 100% coverage
- Export OpenAI types and class in src/index.ts

Resolves: #47

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "homepage": "https://github.com/strands-agents/sdk-typescript#readme",
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.911.0"
+    "@aws-sdk/client-bedrock-runtime": "^3.911.0",
+    "openai": "^4.77.3"
   }
 }
