--- a/package.json
+++ b/package.json
@@ -66,5 +66,8 @@
   "homepage": "https://github.com/strands-agents/sdk-typescript#readme",
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.911.0"
+  },
+  "optionalDependencies": {
+    "openai": "^4.77.3"
   }
 }
