--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
   },
   "homepage": "https://github.com/strands-agents/sdk-typescript#readme",
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.911.0"
+    "@aws-sdk/client-bedrock-runtime": "^3.911.0",
+    "zod": "^4.1.12"
   },
   "optionalDependencies": {
     "openai": "^4.77.3"
