Include only the tools that we want

--- a/.github/scripts/requirements.txt
+++ b/.github/scripts/requirements.txt
@@ -1,10 +1,8 @@
-# Strands packages
+# Strands packages - only what we need
 strands-agents
-strands-agents[all]
 strands-agents-tools
 
-# Additional dependencies
+# Additional dependencies for our specific tools
 colorama
 rich
 requests>=2.28.0
-boto3
