--- a/.github/workflows/strands-command.yml
+++ b/.github/workflows/strands-command.yml
@@ -68,6 +68,7 @@ jobs:
       pull-requests: write
       id-token: write # Required for OIDC
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     steps:
       - name: Add strands-running label
         uses: actions/github-script@v8
