--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   },
   "scripts": {
     "build": "tsc",
-    "check": "npm run lint && npm run format && npm run type-check && npm run test:coverage",
+    "check": "npm run lint && npm run format && npm run typecheck && npm run test:coverage && npm run test:types",
     "clean": "rm -rf node_modules dist package-lock.json",
     "test": "vitest run --project unit",
     "test:watch": "vitest --project unit",
     "test:coverage": "vitest run --coverage --project unit",
+    "test:types": "vitest run --project types",
     "test:integ": "vitest run --project integ",
     "lint": "eslint src tests_integ",
     "lint:fix": "eslint src tests_integ --fix",
