--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
   },
   "homepage": "https://github.com/strands-agents/sdk-typescript#readme",
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.911.0"
+    "@aws-sdk/client-bedrock-runtime": "^3.911.0",
+    "@modelcontextprotocol/sdk": "^1.20.2"
   },
   "optionalDependencies": {
     "openai": "^4.77.3"
