feat: add browser environment testing with Vitest and Playwright
- Add @vitest/browser and playwright dependencies
- Configure vitest with unit-node and unit-browser test projects
- Add test:browser and test:all npm scripts
- Expand environment.test.ts with browser compatibility validation
- Add environment detection to skip Node.js-specific tests in browser
- Document multi-environment testing patterns in AGENTS.md
- Add browser globals to ESLint config for test files

All core SDK tests (tools, types, base models) pass in both Node.js
and browser environments. Model provider tests (Bedrock, OpenAI) skip
in browser due to Node.js-specific dependencies (AWS SDK, process.env).

Resolves: #101

--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "build": "tsc",
     "check": "npm run lint && npm run format && npm run typecheck && npm run test:coverage && npm run test:types",
     "clean": "rm -rf node_modules dist package-lock.json",
-    "test": "vitest run --project unit",
-    "test:watch": "vitest --project unit",
-    "test:coverage": "vitest run --coverage --project unit",
+    "test": "vitest run --project unit-node",
+    "test:watch": "vitest --project unit-node",
+    "test:coverage": "vitest run --coverage --project unit-node",
     "test:types": "vitest run --project types",
     "test:integ": "vitest run --project integ",
+    "test:browser": "vitest run --project unit-browser",
+    "test:all": "vitest run",
     "lint": "eslint src tests_integ",
     "lint:fix": "eslint src tests_integ --fix",
     "format": "prettier --write src tests_integ",
@@ -55,10 +57,12 @@
     "@types/node": "^24.6.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.0.0",
     "eslint-plugin-tsdoc": "^0.3.0",
     "husky": "^9.1.7",
+    "playwright": "^1.56.1",
     "prettier": "^3.0.0",
     "typescript": "^5.5.0",
     "vitest": "^3.2.4"
