fix: test:all should run unit-node and unit-browser vitest projects

--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "test:types": "vitest run --project types",
     "test:integ": "vitest run --project integ",
     "test:browser": "vitest run --project unit-browser",
-    "test:all": "vitest run",
-    "test:all:coverage": "vitest run --coverage",
+    "test:all": "vitest run --project unit-node --project unit-browser",
+    "test:all:coverage": "vitest run --coverage --project unit-node --project unit-browser",
     "lint": "eslint src tests_integ",
     "lint:fix": "eslint src tests_integ --fix",
     "format": "prettier --write src tests_integ",
