--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test:types": "vitest run --project types",
     "test:integ": "vitest run --project integ",
     "test:browser": "vitest run --project unit-browser",
+    "test:browser:install": "npx playwright install --with-deps chromium",
     "test:all": "vitest run --project unit-node --project unit-browser",
     "test:all:coverage": "vitest run --coverage --project unit-node --project unit-browser",
     "lint": "eslint src tests_integ",
