--- a/.github/workflows/test-lint.yml
+++ b/.github/workflows/test-lint.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm install && npm audit --audit-level=low
 
       - name: Install Playwright browsers
-        run: npm run test:browser:install
+        run: npx playwright install --with-deps chromium
 
       - name: Run unit tests
         run: npm run test:all:coverage
