--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
       "import": "./dist/models/bedrock.js",
       "types": "./dist/models/bedrock.d.ts"
     },
-    "./vended_tools/http-request": {
-      "import": "./dist/vended_tools/http-request/index.js",
-      "types": "./dist/vended_tools/http-request/index.d.ts"
+    "./vended_tools/notebook": {
+      "import": "./dist/vended_tools/notebook/index.js",
+      "types": "./dist/vended_tools/notebook/index.d.ts"
     }
   },
   "scripts": {
