Add merge_group to integration test workflow

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -3,7 +3,8 @@ name: Secure Integration test
 on:
   pull_request_target:
     branches: main
-
+  merge_group: # Run tests in merge queue
+    types: [checks_requested]
 jobs:
   authorization-check:
     permissions: read-all
