--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "husky": "^9.1.7",
     "playwright": "^1.56.1",
     "prettier": "^3.0.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.5.0",
     "vitest": "^4.0.8"
   },
